--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ahmedElghandour1/mastering-typescript#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "*",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.42.0",
