--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "noImplicitAny": true,
     "module": "es6",
     "sourceMap": true,
-    "target": "es5",
+    "target": "es2021",
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
+    "strictBindCallApply": true
   }
 }
